Add toast alert to market item details

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -716,6 +716,9 @@
                         <outlet property="priceIPSXLabel" destination="F2F-C1-dgj" id="t3q-RL-jen"/>
                         <outlet property="progressLabel" destination="Tzx-L0-Bi5" id="fKD-ts-kHJ"/>
                         <outlet property="progressView" destination="czV-6Q-iFg" id="1Tb-Xi-5O0"/>
+                        <outlet property="separatorView" destination="qh6-cI-J6X" id="Sji-bL-XXF"/>
+                        <outlet property="topBarView" destination="Dk8-Su-NLW" id="DlO-S7-oCT"/>
+                        <outlet property="topSeparatorConstraint" destination="QBp-6T-AEp" id="fYH-nS-hDv"/>
                         <outlet property="trafficLabel" destination="SJK-rl-7mb" id="ynP-iZ-Nug"/>
                         <segue destination="i3b-eM-f4N" kind="show" identifier="ViewCartSegueID" id="6eO-CG-Oxt"/>
                     </connections>
@@ -1064,7 +1067,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="69%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehV-56-shb">
-                                                            <rect key="frame" x="348" y="16" width="29" height="17"/>
+                                                            <rect key="frame" x="304" y="15.666666666666664" width="29" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -1076,7 +1079,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloudComputing" translatesAutoresizingMaskIntoConstraints="NO" id="RTL-kw-G0W">
-                                                            <rect key="frame" x="18" y="63" width="17" height="14"/>
+                                                            <rect key="frame" x="17.666666666666664" y="63" width="17" height="14"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="17" id="O6q-bG-vsF"/>
                                                                 <constraint firstAttribute="height" constant="14" id="lid-dS-XDy"/>
@@ -1089,7 +1092,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" translatesAutoresizingMaskIntoConstraints="NO" id="6Bw-DD-nRH">
-                                                            <rect key="frame" x="19" y="85" width="15" height="14"/>
+                                                            <rect key="frame" x="18.666666666666664" y="85" width="15" height="14"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="15" id="L7j-8e-8v2"/>
                                                                 <constraint firstAttribute="height" constant="14" id="uer-5C-0c1"/>
@@ -1109,7 +1112,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nUv-hA-rUi">
-                                                            <rect key="frame" x="324" y="83" width="27" height="18"/>
+                                                            <rect key="frame" x="280" y="83" width="27" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                             <color key="textColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
