Add loading view and error handling to market item

--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -674,6 +674,14 @@
                                     <constraint firstItem="eVf-em-eZ3" firstAttribute="centerY" secondItem="qoK-WY-LS5" secondAttribute="centerY" id="Yuj-3c-5Yw"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="emp-3q-qBf" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
+                                <rect key="frame" x="165.66666666666666" y="389" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Cae-wZ-POv"/>
+                                    <constraint firstAttribute="width" constant="44" id="uNZ-ka-lid"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -681,6 +689,7 @@
                             <constraint firstItem="qoK-WY-LS5" firstAttribute="bottom" secondItem="lFM-H4-C3e" secondAttribute="bottom" constant="100" id="7vd-g8-KE5"/>
                             <constraint firstItem="lFM-H4-C3e" firstAttribute="top" secondItem="Dk8-Su-NLW" secondAttribute="top" constant="50" id="9Ia-mG-QbV"/>
                             <constraint firstItem="qh6-cI-J6X" firstAttribute="leading" secondItem="Dk8-Su-NLW" secondAttribute="leading" id="9Ls-cL-nEm"/>
+                            <constraint firstItem="emp-3q-qBf" firstAttribute="centerX" secondItem="lFM-H4-C3e" secondAttribute="centerX" id="9uL-aG-3KS"/>
                             <constraint firstItem="qoK-WY-LS5" firstAttribute="trailing" secondItem="lFM-H4-C3e" secondAttribute="trailing" id="NSu-A5-AKy"/>
                             <constraint firstItem="qh6-cI-J6X" firstAttribute="top" secondItem="Dk8-Su-NLW" secondAttribute="bottom" id="QBp-6T-AEp"/>
                             <constraint firstItem="lFM-H4-C3e" firstAttribute="trailing" secondItem="Mfs-rd-6Oh" secondAttribute="trailing" id="S16-fm-Amy"/>
@@ -699,6 +708,7 @@
                             <constraint firstItem="lFM-H4-C3e" firstAttribute="top" secondItem="qoK-WY-LS5" secondAttribute="top" constant="100" id="vmJ-jf-ujW"/>
                             <constraint firstItem="tF8-MN-aOu" firstAttribute="top" secondItem="qh6-cI-J6X" secondAttribute="bottom" constant="30" id="w7N-VY-yCT"/>
                             <constraint firstItem="WNu-13-jpN" firstAttribute="top" secondItem="91H-v7-tup" secondAttribute="bottom" constant="24" id="wuh-en-It2"/>
+                            <constraint firstItem="emp-3q-qBf" firstAttribute="centerY" secondItem="lFM-H4-C3e" secondAttribute="centerY" id="zHu-5E-O4y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lFM-H4-C3e"/>
                     </view>
@@ -711,6 +721,7 @@
                         <outlet property="countryLabel" destination="iaD-KF-yzr" id="GKv-i2-8np"/>
                         <outlet property="durationLabel" destination="e5n-iy-Llb" id="Z8X-ai-L6b"/>
                         <outlet property="flagImageView" destination="N49-i0-cE3" id="BWO-j1-lqT"/>
+                        <outlet property="loadingView" destination="emp-3q-qBf" id="vZB-ni-gBG"/>
                         <outlet property="noOfProxiesLabel" destination="tF8-MN-aOu" id="gWO-9t-mu1"/>
                         <outlet property="offerTypeLabel" destination="eOX-gz-RoA" id="i4F-RC-vap"/>
                         <outlet property="priceIPSXLabel" destination="F2F-C1-dgj" id="t3q-RL-jen"/>
