--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -18,6 +18,14 @@
             </objects>
             <point key="canvasLocation" x="-966" y="1454"/>
         </scene>
+        <!--Dashboard-->
+        <scene sceneID="eQZ-hG-bck">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Dashboard" id="U5d-SP-6Uu" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BZV-BO-7Di" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-978" y="1610"/>
+        </scene>
         <!--Marketplace-->
         <scene sceneID="IFr-bv-5eF">
             <objects>
@@ -1894,6 +1902,9 @@
                                         <rect key="frame" x="331" y="56" width="44" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                         <state key="normal" image="history"/>
+                                        <connections>
+                                            <segue destination="U5d-SP-6Uu" kind="presentation" id="CyX-fU-6VS"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
