--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1617,7 +1617,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="A1A-dc-KNu" secondAttribute="bottom" constant="6" id="u3O-5h-xmx"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="orderNumberLabel" destination="K0Y-cp-Odr" id="kPW-b0-Dav"/>
                                         </connections>
