Complete dashboard UI

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                 <viewControllerPlaceholder storyboardName="Dashboard" referencedIdentifier="DashboardDetailsID" id="dIQ-K7-fKc" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T6g-2S-sjM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-966" y="1454"/>
+            <point key="canvasLocation" x="-967" y="1513"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="eQZ-hG-bck">
@@ -24,7 +24,15 @@
                 <viewControllerPlaceholder storyboardName="Dashboard" id="U5d-SP-6Uu" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BZV-BO-7Di" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-978" y="1610"/>
+            <point key="canvasLocation" x="-1011" y="1606"/>
+        </scene>
+        <!--OrderControllerID-->
+        <scene sceneID="Ld7-OK-TGl">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Dashboard" referencedIdentifier="OrderControllerID" id="KRo-vI-EOL" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ILR-Dc-GsD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-977" y="1691"/>
         </scene>
         <!--Marketplace-->
         <scene sceneID="IFr-bv-5eF">
@@ -1948,6 +1956,7 @@
                         <outlet property="topBarView" destination="foH-a0-b2v" id="GSt-Ho-rvE"/>
                         <outlet property="topConstraintOutlet" destination="yeU-jC-edd" id="FPy-dv-IAb"/>
                         <segue destination="dIQ-K7-fKc" kind="show" identifier="DetailsSegueID" id="dXl-GO-Ec0"/>
+                        <segue destination="KRo-vI-EOL" kind="show" identifier="ViewOrderSegueID" id="VFZ-zt-bhn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n2X-Qv-1E1" userLabel="First Responder" sceneMemberID="firstResponder"/>
