--- a/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
+++ b/IPSX/Flows/Marketplace/Storyboard/Market.storyboard
@@ -793,7 +793,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GQK-gK-74n" userLabel="Header View" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                <rect key="frame" x="15" y="102" width="344" height="49"/>
+                                <rect key="frame" x="15" y="102.66666666666667" width="344" height="49.000000000000014"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total balance" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="deS-Fz-gv0">
                                         <rect key="frame" x="8" y="8" width="75.333333333333329" height="14.333333333333336"/>
@@ -802,7 +802,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100.000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ZW-Kr-1M6">
-                                        <rect key="frame" x="8" y="24" width="60" height="18"/>
+                                        <rect key="frame" x="8" y="23.666666666666657" width="60" height="18"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <color key="textColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -833,10 +833,10 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KNX-b0-cvP" userLabel="No Wallet View" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                <rect key="frame" x="15" y="102" width="344" height="49"/>
+                                <rect key="frame" x="15" y="102.66666666666667" width="344" height="49.000000000000014"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="infoWhite" translatesAutoresizingMaskIntoConstraints="NO" id="bmD-ty-ztP">
-                                        <rect key="frame" x="17" y="16.666666666666671" width="16" height="16"/>
+                                        <rect key="frame" x="17" y="16.333333333333329" width="16" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="Uia-sf-96y"/>
                                             <constraint firstAttribute="height" constant="16" id="lVJ-Ch-H7q"/>
@@ -879,19 +879,19 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEj-KQ-TmM">
-                                <rect key="frame" x="15" y="175" width="74" height="22"/>
+                                <rect key="frame" x="15" y="175.66666666666666" width="74" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 offers" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H8W-eM-waL">
-                                <rect key="frame" x="97" y="175" width="66" height="22"/>
+                                <rect key="frame" x="97" y="175.66666666666666" width="66" height="22"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="123" estimatedRowHeight="-1" sectionHeaderHeight="38" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xIf-93-uwZ">
-                                <rect key="frame" x="0.0" y="205" width="375" height="515.66666666666663"/>
+                                <rect key="frame" x="0.0" y="205.66666666666663" width="375" height="515"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="yEq-as-17R">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="3"/>
@@ -933,7 +933,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20,200.50" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fW2-TW-NNk">
-                                                    <rect key="frame" x="237" y="42" width="70" height="17"/>
+                                                    <rect key="frame" x="241" y="42" width="70" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <color key="textColor" white="1" alpha="0.74771676936619713" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -972,7 +972,7 @@
                                                 <constraint firstItem="aib-Qn-qWf" firstAttribute="trailing" secondItem="6M0-IY-Qa7" secondAttribute="trailing" id="49P-nv-hYN"/>
                                                 <constraint firstItem="fW2-TW-NNk" firstAttribute="centerY" secondItem="aib-Qn-qWf" secondAttribute="centerY" id="4lb-LE-JnV"/>
                                                 <constraint firstAttribute="bottom" secondItem="b1H-VB-M8S" secondAttribute="bottom" constant="14" id="5Jb-iR-utp"/>
-                                                <constraint firstItem="aib-Qn-qWf" firstAttribute="leading" secondItem="fW2-TW-NNk" secondAttribute="trailing" constant="12" id="95a-C3-py5"/>
+                                                <constraint firstItem="aib-Qn-qWf" firstAttribute="leading" secondItem="fW2-TW-NNk" secondAttribute="trailing" constant="8" id="95a-C3-py5"/>
                                                 <constraint firstAttribute="trailing" secondItem="bIp-gM-bzT" secondAttribute="trailing" id="AXs-p6-tAE"/>
                                                 <constraint firstItem="aib-Qn-qWf" firstAttribute="centerY" secondItem="2Pv-Lr-cY6" secondAttribute="centerY" id="Dw6-ap-b9j"/>
                                                 <constraint firstAttribute="trailing" secondItem="6M0-IY-Qa7" secondAttribute="trailing" constant="10" id="JSX-AI-8Hb"/>
@@ -1261,6 +1261,7 @@
                             <constraint firstItem="KNX-b0-cvP" firstAttribute="centerX" secondItem="GQK-gK-74n" secondAttribute="centerX" id="CDs-Nj-NJM"/>
                             <constraint firstItem="kkM-T1-Dzp" firstAttribute="trailing" secondItem="MVQ-xz-sA7" secondAttribute="trailing" id="Fmu-eG-hE3"/>
                             <constraint firstItem="Sh8-Kb-t4h" firstAttribute="top" secondItem="sba-SG-T9c" secondAttribute="bottom" id="HHC-Vx-XBQ"/>
+                            <constraint firstItem="GQK-gK-74n" firstAttribute="top" secondItem="VuK-LO-7lq" secondAttribute="bottom" constant="14" id="HdC-cj-6j6"/>
                             <constraint firstItem="KNX-b0-cvP" firstAttribute="width" secondItem="GQK-gK-74n" secondAttribute="width" id="IYe-Sa-Myi"/>
                             <constraint firstItem="sba-SG-T9c" firstAttribute="trailing" secondItem="kkM-T1-Dzp" secondAttribute="trailing" constant="3" id="IwH-Ar-o5G"/>
                             <constraint firstItem="KNX-b0-cvP" firstAttribute="centerY" secondItem="GQK-gK-74n" secondAttribute="centerY" id="JYy-3A-VAT"/>
@@ -1270,7 +1271,6 @@
                             <constraint firstItem="dJY-Rl-lDg" firstAttribute="centerX" secondItem="kkM-T1-Dzp" secondAttribute="centerX" id="QLo-44-QXV"/>
                             <constraint firstItem="xEj-KQ-TmM" firstAttribute="leading" secondItem="GQK-gK-74n" secondAttribute="leading" id="QRk-4s-2aM"/>
                             <constraint firstItem="MVQ-xz-sA7" firstAttribute="leading" secondItem="kkM-T1-Dzp" secondAttribute="leading" id="Wcc-9t-0Di"/>
-                            <constraint firstItem="GQK-gK-74n" firstAttribute="top" secondItem="MVQ-xz-sA7" secondAttribute="bottom" constant="14" id="Wvc-Iz-h3A"/>
                             <constraint firstItem="GQK-gK-74n" firstAttribute="leading" secondItem="kkM-T1-Dzp" secondAttribute="leading" constant="15" id="YdF-fQ-hOZ"/>
                             <constraint firstItem="H8W-eM-waL" firstAttribute="centerY" secondItem="xEj-KQ-TmM" secondAttribute="centerY" id="gc3-Ie-xol"/>
                             <constraint firstItem="kkM-T1-Dzp" firstAttribute="trailing" secondItem="GQK-gK-74n" secondAttribute="trailing" constant="16" id="ghn-Ec-fJM"/>
